--- a/style.css
+++ b/style.css
@@ -20,14 +20,35 @@ body {
 
 .form{
     width: 60%;
-    outline: 1px solid black;
+    box-shadow: 0px 0px 5px gray;
+    border-radius: 5px;
     margin: auto;
+    padding: 20px;
 }
 
 .form > form > label{
     font-weight: bold;
 }
 
-.form > form > input{
+.form > form > input[type="text"]{
     width: 98%;
+}
+
+.form > form > select{
+    height: 2.5vh;
+}
+
+.form > form > button{
+    width: 99%;
+    height: 2.5vh;
+}
+
+.form > form > select, .form > form > button{
+    background-color: rgb(231, 231, 231);
+    border-radius: 5px;
+    border: 0.1px solid black;
+}
+
+.form > form > input[type="radio"]{
+    width: 20px;
 }
